Java 11 code cleanups: using List.of() and getting rid of type parameters in anonymous classes.
Signed-off-by: Simone Bordet <simone.bordet@gmail.com>