@@ -18,16 +18,13 @@ package org.cometd.annotation.client;
 import java.lang.reflect.Field;
 import java.lang.reflect.Method;
 import java.lang.reflect.Modifier;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ConcurrentMap;
 import java.util.concurrent.CopyOnWriteArrayList;
-
 import javax.annotation.PostConstruct;
 import javax.annotation.PreDestroy;
-
 import org.cometd.annotation.AnnotationProcessor;
 import org.cometd.annotation.Listener;
 import org.cometd.annotation.Service;
@@ -197,7 +194,7 @@ public class ClientAnnotationProcessor extends AnnotationProcessor {
             return false;
         }
 
-        boolean result = processInjectables(bean, Arrays.asList(injectables));
+        boolean result = processInjectables(bean, List.of(injectables));
         result |= processSession(bean, clientSession);
         return result;
     }
