@@ -17,7 +17,6 @@ package org.cometd.client.transport;
 
 import java.text.ParseException;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ScheduledExecutorService;
@@ -146,7 +145,7 @@ public abstract class ClientTransport extends AbstractTransport {
     public abstract void send(TransportListener listener, List<Message.Mutable> messages);
 
     protected List<Message.Mutable> parseMessages(String content) throws ParseException {
-        return new ArrayList<>(Arrays.asList(jsonContext.parse(content)));
+        return new ArrayList<>(List.of(jsonContext.parse(content)));
     }
 
     protected String generateJSON(List<Message.Mutable> messages) {
